--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- Header -->
     <header class="header">
         <div class="header-content">
+            <button class="mobile-menu-toggle" onclick="toggleMobileNav()">
+                <i class="fas fa-bars"></i>
+            </button>
             <h1><i class="fas fa-cogs"></i> QLBH Admin Dashboard</h1>
             <div class="user-info">
                 <span class="user-name">Admin</span>
@@ -22,7 +25,7 @@
 
     <!-- Navigation -->
     <nav class="nav">
-        <div class="nav-content">
+        <div class="nav-content" id="navContent">
             <button class="nav-item active" data-module="dashboard">
                 <i class="fas fa-chart-pie"></i> Dashboard
             </button>
