--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="nav">
         <div class="nav-content" id="navContent">
             <button class="nav-item active" data-module="dashboard">
-                <i class="fas fa-chart-pie"></i> Dashboard
+                <i class="fas fa-chart-pie"></i> Tổng Quan
             </button>
             <button class="nav-item" data-module="tonkho">
                 <i class="fas fa-boxes"></i> Tồn Kho
@@ -58,7 +58,7 @@
         <!-- Dashboard Module -->
         <div id="dashboard" class="module active">
             <div class="module-header">
-                <h2><i class="fas fa-chart-pie"></i> Dashboard Overview</h2>
+                <h2><i class="fas fa-chart-pie"></i> Tổng Quan</h2>
                 <div class="header-actions">
                     <button class="btn btn-primary" onclick="refreshDashboard()">
                         <i class="fas fa-sync-alt"></i> Làm Mới
