--- a/index.html
+++ b/index.html
@@ -81,20 +81,20 @@
                 </div>
                 <div class="stat-card">
                     <div class="stat-icon">
-                        <i class="fas fa-dollar-sign"></i>
+                        <i class="fas fa-chart-line"></i>
                     </div>
                     <div class="stat-content">
-                        <h3>Doanh Thu Tháng</h3>
+                        <h3 id="revenueMonthTitle">Doanh Thu Tháng</h3>
                         <div class="stat-number" id="totalRevenue">0</div>
                         <div class="stat-trend positive">+12.3%</div>
                     </div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-icon">
-                        <i class="fas fa-chart-line"></i>
+                        <i class="fas fa-dollar-sign"></i>
                     </div>
                     <div class="stat-content">
-                        <h3>Lợi Nhuận Tháng</h3>
+                        <h3 id="profitMonthTitle">Lợi Nhuận Tháng</h3>
                         <div class="stat-number" id="totalProfit">0</div>
                         <div class="stat-trend positive">+8.1%</div>
                     </div>
