--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <i class="fas fa-shopping-cart"></i>
                     </div>
                     <div class="stat-content">
-                        <h3>Bán Tháng</h3>
+                        <h3 id="banMonthTitle">Bán Tháng</h3>
                         <div class="stat-number" id="totalBan">0</div>
                         <div class="stat-trend positive">+15.7%</div>
                     </div>
