--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
             </button>
             <h1><i class="fas fa-cogs"></i> QLBH Admin Dashboard</h1>
             <div class="user-info">
-                <span class="user-name">Admin</span>
+                <span class="user-name" id="userEmail">Admin</span>
                 <i class="fas fa-user-circle"></i>
             </div>
+            <button onclick="admin.logout()" class="logout-btn" style="margin-left: 10px; padding: 8px 16px; background: #dc3545; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 14px;">
+                <i class="fas fa-sign-out-alt"></i> Đăng Xuất
+            </button>
         </div>
     </header>
 
