--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QLBH Admin Dashboard</title>
+    
+    <!-- ✅ Ẩn body mặc định - chỉ hiển thị sau khi check auth -->
+    <style>
+        body {
+            display: none !important;
+            visibility: hidden !important;
+        }
+        body.auth-verified {
+            display: block !important;
+            visibility: visible !important;
+        }
+    </style>
+    
     <link rel="stylesheet" href="css/admin.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
