--- a/login.html
+++ b/login.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QLBH Admin - Login</title>
+    
+    <!-- ✅ Hiển thị login page ngay -->
+    <style>
+        body {
+            display: block !important;
+            visibility: visible !important;
+        }
+    </style>
+    
     <link rel="stylesheet" href="css/admin.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
