--- a/index.html
+++ b/index.html
@@ -32,13 +32,22 @@
                 <i class="fas fa-bars"></i>
             </button>
             <h1><i class="fas fa-cogs"></i> QLBH Admin Dashboard</h1>
-            <div class="user-info">
+            <div class="user-info" onclick="toggleUserDropdown(event)">
                 <span class="user-name" id="userEmail">Admin</span>
                 <i class="fas fa-user-circle"></i>
+                <i class="fas fa-chevron-down dropdown-arrow"></i>
+                <div class="user-dropdown" id="userDropdown">
+                    <div class="dropdown-item user-name-item">
+                        <i class="fas fa-user"></i>
+                        <span id="dropdownUserEmail">Admin</span>
+                    </div>
+                    <div class="dropdown-divider"></div>
+                    <div class="dropdown-item logout-item" onclick="admin.logout()">
+                        <i class="fas fa-sign-out-alt"></i>
+                        <span>Đăng xuất</span>
+                    </div>
+                </div>
             </div>
-            <button onclick="admin.logout()" class="logout-btn" style="margin-left: 10px; padding: 8px 16px; background: #dc3545; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 14px;">
-                <i class="fas fa-sign-out-alt"></i> Đăng Xuất
-            </button>
         </div>
     </header>
 
