thêm style nhỏ, thêm tổng hợp giá trị ở bộ lọc và giá trị tổng cộng của các bản ghi

--- a/index.html
+++ b/index.html
@@ -248,12 +248,20 @@
 
             <!-- Filter Summary -->
             <div class="filter-summary" id="filterSummary" style="display:none">
-                <span id="filterSummaryText"></span>
+                <small>
+                    <span id="filterSummaryText"></span>
+                    <span class="info-divider"></span>
+                    <span id="filterSummaryValue"></span>
+                </small>
             </div>
 
             <!-- Total Records Info -->
             <div class="total-records-info" id="tonkhoTotalRecordsInfo">
-                <small>Tổng số bản ghi: <span id="tonkhoTotalRecordsCount">0</span></small>
+                <small>
+                    <span>Tổng số bản ghi: <strong id="tonkhoTotalRecordsCount">0</strong></span>
+                    <span class="info-divider"></span>
+                    <span>Tổng Giá Trị Kho: <strong id="tonkhoTotalValueInline">0 đ</strong></span>
+                </small>
             </div>
 
             <!-- Data Table -->
@@ -450,12 +458,20 @@
 
             <!-- Filter Summary -->
             <div class="filter-summary" id="nhapFilterSummary" style="display:none">
-                <span id="nhapFilterSummaryText"></span>
+                <small>
+                    <span id="nhapFilterSummaryText"></span>
+                    <span class="info-divider"></span>
+                    <span id="nhapFilterSummaryValue"></span>
+                </small>
             </div>
 
             <!-- Total Records Info -->
             <div class="total-records-info" id="nhaphangTotalRecordsInfo">
-                <small>Tổng số bản ghi: <span id="nhaphangTotalRecordsCount">0</span></small>
+                <small>
+                    <span>Tổng số bản ghi: <strong id="nhaphangTotalRecordsCount">0</strong></span>
+                    <span class="info-divider"></span>
+                    <span>Tổng Giá Trị Nhập: <strong id="nhaphangTotalValueInline">0 đ</strong></span>
+                </small>
             </div>
 
             <!-- Data Table -->
