Thêm phần tổng hợp doanh thu, giá vốn, lợi nhuận trên bộ lọc và thanh total-records-info
Thêm các phần tổng hợp giá trị doanh thu, giá vốn, lợi nhuận vào thanh "filter-summary" và "total-records-info"

--- a/index.html
+++ b/index.html
@@ -654,12 +654,28 @@
 
             <!-- Filter Summary -->
             <div class="filter-summary" id="banhangFilterSummary" style="display:none">
-                <span id="banhangFilterSummaryText"></span>
+                <small>
+                    <span id="banhangFilterSummaryText"></span>
+                    <span class="info-divider"></span>
+                    <span id="banhangFilterSummaryDoanhThu"></span>
+                    <span class="info-divider"></span>
+                    <span id="banhangFilterSummaryGiaVon"></span>
+                    <span class="info-divider"></span>
+                    <span id="banhangFilterSummaryLoiNhuan"></span>
+                </small>
             </div>
 
             <!-- Total Records Info -->
             <div class="total-records-info" id="banhangTotalRecordsInfo">
-                <small>Tổng số bản ghi: <span id="banhangTotalRecordsCount">0</span></small>
+                <small>
+                    <span>Tổng số bản ghi: <strong id="banhangTotalRecordsCount">0</strong></span>
+                    <span class="info-divider"></span>
+                    <span>Tổng Doanh Thu: <strong id="banhangTotalDoanhThu">0 đ</strong></span>
+                    <span class="info-divider"></span>
+                    <span>Tổng Giá Vốn: <strong id="banhangTotalGiaVon">0 đ</strong></span>
+                    <span class="info-divider"></span>
+                    <span>Tổng Lợi Nhuận: <strong id="banhangTotalLoiNhuan">0 đ</strong></span>
+                </small>
             </div>
 
             <!-- Data Table -->
@@ -813,7 +829,15 @@
 
                 <!-- Total Records Info -->
                 <div class="total-records-info" id="customerTotalRecordsInfo" style="display:none">
-                    <small>Tổng số bản ghi: <span id="customerTotalRecordsCount">0</span></small>
+                    <small>
+                        <span>Tổng số bản ghi: <strong id="customerTotalRecordsCount">0</strong></span>
+                        <span class="info-divider"></span>
+                        <span>Tổng Doanh Thu: <strong id="customerTotalDoanhThu">0 đ</strong></span>
+                        <span class="info-divider"></span>
+                        <span>Tổng Giá Vốn: <strong id="customerTotalGiaVon">0 đ</strong></span>
+                        <span class="info-divider"></span>
+                        <span>Tổng Lợi Nhuận: <strong id="customerTotalLoiNhuan">0 đ</strong></span>
+                    </small>
                 </div>
 
                 <!-- Data Table -->
